helloworld/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-k8s
  namespace: helloworld
spec:
spec:
  rules:
    - http:
        paths:
          - path: /helloworld
            pathType: Prefix
            backend:
              service:
                name: hello-k8s
                port:
                  number: 80
